--- a/src/main/resources/templates/gestionentradas.html
+++ b/src/main/resources/templates/gestionentradas.html
@@ -4,6 +4,7 @@
 <head>
     <th:block th:replace="fragments/head :: header" />
     <title>FilmAdmin</title>
+    <script async type="text/javascript" th:src="@{/js/funcionesGestion.js}"></script>
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -15,24 +16,22 @@
                 <div class="d-flex flex-column mt-3">
                     <div class="d-flex justify-content-center"><h2>Sesiones</h2></div>
                     <div class="d-flex mt-3 gestionn">
-                        <select class="form-select w-50 h-50 ms-auto" aria-label="Seleccion de Cine">
-                            <option selected>Seleccione un cine</option>
+                        <select class="form-select w-50 h-50 ms-auto" aria-label="Seleccion de Cine" onchange="filtroCine(event)">
+                            <option selected value="0">Seleccione un cine</option>
                             <option th:each="cine : ${cines}" th:text="${cine.ciudad + ' - ' + cine.nombre}"
-                                th:attr="value=#{cine.id}">Madrid - La Gavia</option>
+                                th:attr="value=${cine.id}">Madrid - La Gavia</option>
                         </select>
-                        <select class="form-select w-50 ms-3" aria-label="Seleccion de Sala" disabled>
-                            <option selected>Seleccione una sala</option>
-                            <option value="1">Sala 1</option>
-                            <option value="2">Sala 2</option>
+                        <select id="sala-selector" class="form-select w-50 ms-3" aria-label="Seleccion de Sala" onchange="filtroSala(event)" disabled>
+                            <option selected value="0">Seleccione una sala</option>
                         </select>
-                        <input type="date" class="form-control w-50 ms-3" th:value="${#temporals.format(dia, 'yyyy-MM-dd')}" id="fecha" name="fecha" required="required">
-                        <input type="text" class="form-control w-50 ms-3" placeholder="Busca un título" >
+                        <input type="date" class="form-control w-50 ms-3" th:value="${#temporals.format(dia, 'yyyy-MM-dd')}" id="fecha" name="fecha" onchange="filtroFecha(event)">
+                        <input type="text" class="form-control w-50 ms-3" placeholder="Busca un título" onkeyup="filtroTitulo(event)">
                     </div>
                     <div class="table-responsive tablagestion mt-3">
                         <table class="table align-middle">
                             <thead></thead>
-                            <tbody>
-                                <tr th:each="sesion : ${sesiones}">
+                            <tbody id="peliculas">
+                                <tr th:each="sesion : ${sesiones}" th:id="${sesion.id}" th:class="'cine-' + ${sesion.cine.id} + ' sala-' + ${sesion.sala.id}">
                                     <td class="d-flex align-items-center"><a th:href="@{/peliculas/{id}(id=${sesion.pelicula.id})}"><img
                                         th:src="@{/img/{img}(img=${sesion.pelicula.img})}" src="/img/img1.jpg"
                                         alt="imagen pelicula" height="120px" width="84px"
@@ -43,17 +42,18 @@
                                     <td><a th:href="@{/peliculas/{id}(id=${sesion.pelicula.id})}" th:text="${sesion.pelicula.titulo}" class="text-dark bold">El buen patrón</a></td>
                                     <td th:text="${sesion.cine.nombre}">La Gavia</td>
                                     <td th:text="${sesion.sala.nombre}">Sala 2</td>
-                                    <td><button type="button" class="btn btn-dark btn-sm" data-bs-toggle="modal" data-bs-target="#modalButacas">Ver asientos</button></td>
+                                    <td><button type="button" class="btn btn-dark btn-sm" onclick="verAsientos(event)">Ver asientos</button></td>
                                 </tr>    
                             </tbody>
                         </table>
                     </div>
                 </div>
                 <div class="d-flex flex-column align-items-center comprobarentradas me-5 ">
-                    <h2>Comprobar entradas</h2>
-                    <form class="d-flex flex-column align-items-center">
-                        <input type="text" class="form-control w-50 mt-3">
-                        <button type="button" class="btn btn-dark mt-3" data-bs-toggle="modal" data-bs-target="#modalButacas">Comprobar código</button>
+                    <h3>Comprobar</h3>
+                    <h3>Entradas</h3>
+                    <form class="d-flex flex-column align-items-center" id="formcomprobar" onsubmit="comprobarEntrada(event)">
+                        <input type="text" class="form-control w-75 mt-3" id="codigoentrada" required>
+                        <button type="submit" class="btn btn-dark mt-3" >Comprobar código</button>
                         <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
                             <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
                               <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
@@ -65,12 +65,6 @@
                               <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
                             </symbol>
                         </svg>
-                        <div class="alert alert-danger d-flex align-items-center mt-4" role="alert">
-                            <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
-                            <div>
-                                ESTE CÓDIGO NO CORRESPONDE A NINGUNA ENTRADA
-                            </div>
-                        </div>
                     </form>
                 </div>          
             </div>
@@ -79,60 +73,13 @@
             <div class="modal-dialog modal-dialog-centered modal-lg">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Asientos para El buen patrón - 21:00 - La Gavia - Sala 2 </h5>
+                  <h5 class="modal-title" id="tituloModal">Asientos para El buen patrón - 21:00 - La Gavia - Sala 2 </h5>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <div class="d-flex flex-column seat-selector-modal">
-                        <svg width="640" height="360">
-                            <circle id="1" cx="50" cy="50" r="20" stroke="black" stroke-width="3" fill="#92bcea" />
-                            <circle id="2" cx="100" cy="50" r="20" stroke="black" stroke-width="3" fill="#92bcea" />
-                            <circle id="3" cx="150" cy="50" r="20" stroke="black" stroke-width="3" fill="#92bcea" />
-                            <circle id="4" cx="200" cy="50" r="20" stroke="black" stroke-width="3" fill="#92bcea" />
-                            <circle id="5" cx="250" cy="50" r="20" stroke="black" stroke-width="3" fill="#92bcea" />
-                            <circle id="6" cx="300" cy="50" r="20" stroke="black" stroke-width="3" fill="#92bcea" />
-                            <circle id="7" cx="350" cy="50" r="20" stroke="black" stroke-width="3" fill="#92bcea" />
-                            <circle id="8" cx="400" cy="50" r="20" stroke="black" stroke-width="3" fill="#92bcea" />
-                            <circle id="9" cx="450" cy="50" r="20" stroke="black" stroke-width="3" fill="red" />
-                            <circle id="10" cx="500" cy="50" r="20" stroke="black" stroke-width="3" fill="red" />
-                            <circle id="11" cx="550" cy="50" r="20" stroke="black" stroke-width="3" fill="#92bcea" />
-                            <circle id="12" cx="600" cy="50" r="20" stroke="black" stroke-width="3" fill="#92bcea" />
-                            <circle id="13" cx="50" cy="100" r="20" stroke="black" stroke-width="3" fill="#92bcea" />
-                            <circle id="14" cx="100" cy="100" r="20" stroke="black" stroke-width="3" fill="#92bcea" />
-                            <circle id="15" cx="150" cy="100" r="20" stroke="black" stroke-width="3" fill="red" />
-                            <circle id="16" cx="200" cy="100" r="20" stroke="black" stroke-width="3" fill="red" />
-                            <circle id="17" cx="250" cy="100" r="20" stroke="black" stroke-width="3" fill="red" />
-                            <circle id="18" cx="300" cy="100" r="20" stroke="black" stroke-width="3" fill="red" />
-                            <circle id="19" cx="350" cy="100" r="20" stroke="black" stroke-width="3" fill="red" />
-                            <circle id="20" cx="400" cy="100" r="20" stroke="black" stroke-width="3" fill="red" />
-                            <circle id="21" cx="450" cy="100" r="20" stroke="black" stroke-width="3" fill="red" />
-                            <circle id="22" cx="500" cy="100" r="20" stroke="black" stroke-width="3" fill="red" />
-                            <circle id="23" cx="550" cy="100" r="20" stroke="black" stroke-width="3" fill="red" />
-                            <circle id="24" cx="600" cy="100" r="20" stroke="black" stroke-width="3" fill="red" />
-                            <circle id="25" cx="50" cy="150" r="20" stroke="black" stroke-width="3" fill="red" />
-                            <circle id="26" cx="100" cy="150" r="20" stroke="black" stroke-width="3" fill="red" />
-                            <circle id="27" cx="150" cy="150" r="20" stroke="black" stroke-width="3" fill="#92bcea" />
-                            <circle id="28" cx="200" cy="150" r="20" stroke="black" stroke-width="3" fill="red" />
-                            <circle id="29" cx="250" cy="150" r="20" stroke="black" stroke-width="3" fill="red" />
-                            <circle id="30" cx="300" cy="150" r="20" stroke="black" stroke-width="3" fill="#92bcea" />
-                            <circle id="31" cx="350" cy="150" r="20" stroke="black" stroke-width="3" fill="red" />
-                            <circle id="32" cx="400" cy="150" r="20" stroke="black" stroke-width="3" fill="red" />
-                            <circle id="33" cx="450" cy="150" r="20" stroke="black" stroke-width="3" fill="red" />
-                            <circle id="34" cx="500" cy="150" r="20" stroke="black" stroke-width="3" fill="red" />
-                            <circle id="35" cx="550" cy="150" r="20" stroke="black" stroke-width="3" fill="#92bcea" />
-                            <circle id="36" cx="600" cy="150" r="20" stroke="black" stroke-width="3" fill="#92bcea" />
-                            <circle id="37" cx="50" cy="200" r="20" stroke="black" stroke-width="3" fill="red" />
-                            <circle id="38" cx="100" cy="200" r="20" stroke="black" stroke-width="3" fill="red" />
-                            <circle id="39" cx="150" cy="200" r="20" stroke="black" stroke-width="3" fill="red" />
-                            <circle id="40" cx="200" cy="200" r="20" stroke="black" stroke-width="3" fill="red" />
-                            <circle id="41" cx="250" cy="200" r="20" stroke="black" stroke-width="3" fill="#92bcea" />
-                            <circle id="42" cx="300" cy="200" r="20" stroke="black" stroke-width="3" fill="red" />
-                            <circle id="43" cx="350" cy="200" r="20" stroke="black" stroke-width="3" fill="red" />
-                            <circle id="44" cx="400" cy="200" r="20" stroke="black" stroke-width="3" fill="#92bcea" />
-                            <circle id="45" cx="450" cy="200" r="20" stroke="black" stroke-width="3" fill="red" />
-                            <circle id="46" cx="500" cy="200" r="20" stroke="black" stroke-width="3" fill="red" />
-                            <circle id="47" cx="550" cy="200" r="20" stroke="black" stroke-width="3" fill="red" />
-                            <circle id="48" cx="600" cy="200" r="20" stroke="black" stroke-width="3" fill="#92bcea" />
+                        <svg id="asientos" width="640" height="360">
+                            <!-- Aqui se crean las butacas funcionesGestion.js -->
                         </svg>
                         <div class="d-flex justify-content-center align-items-center screen">
                             <h5 class="text-light">PANTALLA</h5>
@@ -150,7 +97,41 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Volver a Gestión Entradas</button>
+                  <button type="button" class="btn btn-dark" data-bs-dismiss="modal" onclick="validarEntrada()">Validar Entrada</button>
+                  <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
+                </div>
+              </div>
+            </div>
+        </div>
+        <div class="modal fade" id="modalButacasSesiones" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-lg">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="tituloModal">Asientos para El buen patrón - 21:00 - La Gavia - Sala 2 </h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="d-flex flex-column seat-selector-modal">
+                        <svg id="asientosSesiones" width="640" height="360">
+                            <!-- Aqui se crean las butacas funcionesGestion.js -->
+                        </svg>
+                        <div class="d-flex justify-content-center align-items-center screen">
+                            <h5 class="text-light">PANTALLA</h5>
+                        </div>
+                        <div class="d-flex justify-content-center align-items-center mt-2">
+                            <div class="d-flex libre me-3">
+                                <div class="muestra me-1"></div>
+                                <h6>LIBRE</h6>
+                            </div>
+                            <div class="d-flex ocupado me-3">
+                                <div class="muestraocup me-1"></div>
+                                <h6>OCUPADO</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Volver a Gestión Entradas</button>
                 </div>
               </div>
             </div>
