Arreglado error en confirmar contraseña de user

--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -99,7 +99,7 @@
     <th:block th:replace="fragments/footer.html :: footer" />
     <script>
         window.onload = () => {
-            const myInput = document.getElementById('passwordconfirm');
+            const myInput = document.getElementById('pass2');
             myInput.onpaste = e => e.preventDefault();
         }
     </script>
