--- a/src/main/resources/templates/resumenEntrada.html
+++ b/src/main/resources/templates/resumenEntrada.html
@@ -5,9 +5,11 @@
     <th:block th:replace="fragments/head :: header" />
     <link rel="stylesheet" th:href="@{/css/print.css}" media="print" href="css/print.css" type="text/css" />
     <title>FilmAdmin</title>
+    <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
+    <script type="text/javascript" th:src="@{/js/funcionesEntrada.js}"></script>
 </head>
 
-<body class="d-flex flex-column h-100">
+<body class="d-flex flex-column h-100" onload="generateQR();">
     <header th:replace="fragments/nav.html :: nav"></header>
 
     <main class="flex-shrink-0">
@@ -33,8 +35,11 @@
                     <button type="button" class="btn btn-dark mt-2" onclick="window.print()">Descargar en PDF</button>
                 </div>
                 <div class="d-flex flex-column align-items-center ms-5">
-                    <img th:src="@{/img/qrtest.png}" src="/img/qrtest.png" alt="imagen cine" height="368px" width="368px" class="d-inline-block">
-                    <h6 th:text="${entrada.codigo}" class="bold">67G5HJ4F</h6>
+                    <!-- <img th:src="@{/img/qrtest.png}" src="/img/qrtest.png" alt="imagen cine" height="368px" width="368px" class="d-inline-block"> -->
+                    <div id="qrcode-container">
+                        <div id="qrcode" class="qrcode"></div>
+                    </div>
+                    <h6 th:text="${entrada.codigo}" class="bold" id="code">67G5HJ4F</h6>
                 </div>
             </div>
             <div class="d-flex justify-content-center mt-5"><a class="text-dark" th:href="@{/peliculas/}">Volver a películas</a></div>
