--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -41,7 +41,7 @@
                             <div class="d-flex justify-content-between">
                                 <h2 class="ms-5">Usuarios</h2>
                                 <input type="text" placeholder="Buscar usuario" class="w-50 buscador ms-5 form-control">
-                                <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#modalUsuario">Añadir usuario</button>
+                                <button type="button" class="btn btn-dark" id="crearusuario">Añadir usuario</button>
                             </div>
                             <div class="table-responsive tabla tablaadmin mt-3">
                                 <table class="table align-middle">
@@ -243,6 +243,11 @@
                                     <label for="userimg" class="visually-hidden">Imagen</label>
                                     <input class="form-control fileinput" type="file" id="userimg" name="userimg" accept="image/*">
                                 </p>
+                            </div>
+                            <div class="d-flex justify-content-start mt-2">
+                                <p>
+                                    <img id="previewimg" src="" height="120px" width="84px" style="display: none;">
+                                </p>
                             </div>  
                             <div class="modal-footer modfooter">
                                 <button type="submit" class="btn btn-dark" id="validarusuario">Validar</button>
@@ -273,7 +278,6 @@
                                     <input type="text" class="form-control" placeholder="Duración (minutos)" id="email2" name="duracion" required="required">
                                 </p>
                             </div>
-                            
                             <div class="d-flex justify-content-between mt-2 ms-3">
                                 <p>
                                     <label for="genero" class="visually-hidden">Genero</label>
@@ -283,7 +287,7 @@
                                     <label for="userimg" class="visually-hidden">Imagen</label>
                                     <input class="form-control fileinput" type="file" id="userimg" name="imagen" accept="image/*">
                                 </p>
-                            </div>       
+                            </div>     
                         </form>
                     </div>
                     <div class="modal-footer modfooter">
@@ -518,6 +522,8 @@
     console.log(salas);
 
     $(function () {
+        $('#crearusuario').click(crearUsuario);
+
         $('.editarusuario').click(editarUsuario);
         $('.editarcine').click({cines}, editarCine);
         $('.editarsala').click({salas}, editarSala);
